jdk 24와 lombok 호환성 이슈로 lombok 삭제